@@ -376,6 +376,12 @@ int JackDriver::Start()
     return 0;
 }
 
+int JackDriver::Stop()
+{
+    fIsRunning = false;
+    return 0;
+}
+
 int JackDriver::StartSlaves()
 {
     int res = 0;
@@ -392,12 +398,6 @@ int JackDriver::StartSlaves()
         }
     }
     return res;
-}
-
-int JackDriver::Stop()
-{
-    fIsRunning = false;
-    return 0;
 }
 
 int JackDriver::StopSlaves()
